--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "hidsence",
   "version": "0.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "setup ===========================",
+  "main": "gulpfile.js",
   "scripts": {
     "start": "http-server",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -18,16 +18,24 @@
   },
   "homepage": "https://github.com/besutome/hidsence",
   "devDependencies": {
-    "http-server": "^0.8.0",
-    "watch": "^0.16.0",
-    "uglify-js": "^2.4.24",
-    "react": "^0.13.3",
-    "reactify": "^1.1.1",
-    "browserify": "^11.1.0",
+    "babelify": "^6.1.3",
+    "body-parser": "^1.13.2",
+    "browser-sync": "^2.8.0",
+    "browserify": "^11.0.0",
+    "gulp": "^3.9.0",
+    "gulp-concat": "^2.6.0",
+    "gulp-filter": "^3.0.1",
+    "gulp-nodemon": "^2.0.3",
+    "gulp-sourcemaps": "^1.5.2",
+    "gulp-stylus": "^2.0.7",
+    "gulp-uglify": "^1.2.0",
+    "marked": "^0.3.3",
+    "react": "^0.14.0",
+    "require-dir": "^0.3.0",
+    "through2": "^2.0.0",
+    "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
-    "gulp-duration": "0.0.0",
-    "gulp-util": "^3.0.6",
-    "watchify": "^3.4.0",
-    "glob": "^5.0.14"
+    "reactify": "^1.1.1",
+    "http-server": "^0.8.5"
   }
 }
